--- a/Method_example/Method_example/Method_example.csproj
+++ b/Method_example/Method_example/Method_example.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Calculator.cs" />
     <Compile Include="Calcul_tool.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
