--- a/Class_example/Class_example/Class_example.csproj
+++ b/Class_example/Class_example/Class_example.csproj
@@ -43,9 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccessModifier.cs" />
+    <Compile Include="Base.cs" />
+    <Compile Include="Derived.cs" />
     <Compile Include="MyClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="This_generator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
